--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ only_build_toc_files: true
 # See https://jupyterbook.org/content/execute.html
 execute:
   execute_notebooks: cache
-  # exclude_patterns: ['arnold.ipynb']
+  exclude_patterns: ['arnold.ipynb']
   timeout: 5000
 
 # Define the name of the latex output file for PDF builds
