--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+accessible-pygments==0.0.5
 aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
 aiosignal==1.3.1
+alabaster==0.7.16
 annotated-types==0.7.0
 anthropic==0.34.2
 anyio==4.4.0
@@ -17,12 +19,14 @@ bleach==6.1.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.3.2
+click==8.1.7
 comm==0.2.2
 dataclasses-json==0.6.7
 debugpy==1.8.5
 decorator==5.1.1
 defusedxml==0.7.1
 distro==1.9.0
+docutils==0.20.1
 executing==2.1.0
 fastjsonschema==2.20.0
 filelock==3.16.0
@@ -34,6 +38,8 @@ httpcore==1.0.5
 httpx==0.27.2
 huggingface-hub==0.24.7
 idna==3.9
+imagesize==1.4.1
+importlib_metadata==8.5.0
 ipykernel==6.29.5
 ipython==8.27.0
 ipywidgets==8.1.5
@@ -47,6 +53,8 @@ jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 jupyter==1.1.1
+jupyter-book==1.0.2
+jupyter-cache==1.0.0
 jupyter-console==6.6.3
 jupyter-events==0.10.0
 jupyter-lsp==2.2.5
@@ -65,12 +73,19 @@ langchain-core==0.2.40
 langchain-openai==0.1.25
 langchain-text-splitters==0.2.4
 langsmith==0.1.120
+latexcodec==3.0.0
+linkify-it-py==2.0.3
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.22.0
 matplotlib-inline==0.1.7
+mdit-py-plugins==0.4.2
+mdurl==0.1.2
 mistune==3.0.2
 multidict==6.1.0
 mypy-extensions==1.0.0
+myst-nb==1.1.1
+myst-parser==2.0.0
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
@@ -93,9 +108,12 @@ prompt_toolkit==3.0.47
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pybtex==0.24.0
+pybtex-docutils==1.0.3
 pycparser==2.22
 pydantic==2.9.1
 pydantic_core==2.23.3
+pydata-sphinx-theme==0.15.4
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -112,9 +130,28 @@ rpds-py==0.20.0
 Send2Trash==1.8.3
 six==1.16.0
 sniffio==1.3.1
+snowballstemmer==2.2.0
 soupsieve==2.6
+Sphinx==7.4.7
+sphinx-book-theme==1.1.3
+sphinx-comments==0.0.3
+sphinx-copybutton==0.5.2
+sphinx-jupyterbook-latex==1.0.0
+sphinx-multitoc-numbering==0.1.3
+sphinx-thebe==0.3.1
+sphinx-togglebutton==0.3.2
+sphinx_design==0.6.1
+sphinx_external_toc==1.0.1
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-bibtex==2.6.3
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 SQLAlchemy==2.0.34
 stack-data==0.6.3
+tabulate==0.9.0
 tenacity==8.5.0
 terminado==0.18.1
 tiktoken==0.7.0
@@ -127,6 +164,7 @@ types-python-dateutil==2.9.0.20240906
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
+uc-micro-py==1.0.3
 uri-template==1.3.0
 urllib3==2.2.3
 wcwidth==0.2.13
@@ -135,3 +173,4 @@ webencodings==0.5.1
 websocket-client==1.8.0
 widgetsnbextension==4.0.13
 yarl==1.11.1
+zipp==3.20.2
